--- a/src/app/features/product-details/product-details.component.html
+++ b/src/app/features/product-details/product-details.component.html
@@ -1,56 +1,52 @@
-@if(detailsProduct)
-{
-    <section>
-    <div class="text-center my-5">
-  <h2 class="fw-bold display-5 position-relative d-inline-block pb-3 mb-4">
-    Product Details
-    <span 
-      class="position-absolute start-50 translate-middle-x" 
-      style="bottom: 0; width: 100px; height: 3px; background-color: #000;">
-    </span>
-  </h2>
-</div>
-    <div class="row align-items-center">
-        <div class="col-md-3">
-             <owl-carousel-o [options]="customOptionsDetails">
-                 @for(image of detailsProduct.images; track $index)
-            {
-                  <ng-template carouselSlide>
-                           <div>
-                                <img class="w-100 shadow rounded-1" [src]="image" [alt]="detailsProduct.title">
-                            </div>
-                  </ng-template>
-            }
-            </owl-carousel-o>
-
-           
-
-         
-        </div>
-
-
-        <div class="col-md-9">
-
-            <div>
-                <h2>{{detailsProduct.title}}</h2>
-                <p class="text-muted">{{detailsProduct.description}}</p>
-                <h3 class="h6">{{detailsProduct.category.name}}</h3>
-
-                 <div class="div d-flex justify-content-between align-items-center">
-         <div class="mb-2 text-warning">
-            <span><i class="fas fa-star rating-color"></i></span>
-        <span class="text-muted small">{{detailsProduct.ratingsAverage}}</span>
-      </div>
-
-      <h5 class="fw-medium mb-3">{{detailsProduct.price}} EGP</h5>
-                 </div>
-
-                 <button class="btn btn-main w-100">
-                    Add to Cart
-                 </button>
-            </div>
-
-        </div>
+@if(detailsProduct) {
+<section>
+  <div class="text-center my-5">
+    <h2 class="fw-bold display-5 position-relative d-inline-block pb-3 mb-4">
+      Product Details
+      <span
+        class="position-absolute start-50 translate-middle-x"
+        style="bottom: 0; width: 100px; height: 3px; background-color: #000"
+      >
+      </span>
+    </h2>
+  </div>
+  <div class="row align-items-center">
+    <div class="col-md-3">
+      <owl-carousel-o [options]="customOptionsDetails">
+        @for(image of detailsProduct.images; track $index) {
+        <ng-template carouselSlide>
+          <div>
+            <img
+              class="w-100 shadow rounded-1"
+              [src]="image"
+              [alt]="detailsProduct.title"
+            />
+          </div>
+        </ng-template>
+        }
+      </owl-carousel-o>
     </div>
+
+    <div class="col-md-9">
+      <div>
+        <h2>{{ detailsProduct.title }}</h2>
+        <p class="text-muted">{{ detailsProduct.description }}</p>
+        <h3 class="h6">{{ detailsProduct.category.name }}</h3>
+
+        <div class="div d-flex justify-content-between align-items-center">
+          <div class="mb-2 text-warning">
+            <span><i class="fas fa-star rating-color"></i></span>
+            <span class="text-muted small">{{
+              detailsProduct.ratingsAverage
+            }}</span>
+          </div>
+
+          <h5 class="fw-medium mb-3">{{ detailsProduct.price }} EGP</h5>
+        </div>
+
+        <button class="btn btn-main w-100">Add to Cart</button>
+      </div>
+    </div>
+  </div>
 </section>
 }
