--- a/src/app/shared/nav-main/nav-main.component.html
+++ b/src/app/shared/nav-main/nav-main.component.html
@@ -29,14 +29,14 @@
             >Products</a
           >
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a
             class="nav-link"
             routerLink="categories"
             routerLinkActive="active-link"
             >Categories</a
           >
-        </li>
+        </li> -->
         <li class="nav-item">
           <a class="nav-link" routerLink="brands" routerLinkActive="active-link"
             >Brands</a
