--- a/src/app/shared/components/product-card/product-card.component.html
+++ b/src/app/shared/components/product-card/product-card.component.html
@@ -41,7 +41,10 @@
     </div>
   </div>
 
-  <button class="btn btn-main rounded-3 fw-semibold py-2 w-100">
+  <button
+    class="btn btn-main rounded-3 fw-semibold py-2 w-100"
+    (click)="addToCart(product.id)"
+  >
     Add To Cart
   </button>
 </div>
