--- a/src/app/features/product-details/product-details.component.html
+++ b/src/app/features/product-details/product-details.component.html
@@ -119,8 +119,8 @@
       </div>
 
       <div class="d-flex flex-wrap gap-3 mt-4">
-        <button class="btn btn-outline-dark px-4 py-2">Add to Wishlist</button>
-        <button class="btn btn-dark px-4 py-2 text-white">Add to Cart</button>
+        <button class="btn btn-outline-dark px-4 py-2" (click)="addToWishList(detailsProduct.id)">Add to Wishlist</button>
+        <button class="btn btn-dark px-4 py-2 text-white" (click)="addToCart(detailsProduct.id)">Add to Cart</button>
       </div>
 
       <div class="mt-4 d-flex flex-wrap gap-4 text-muted small">
