--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -64,7 +64,7 @@
 
 <div class="row g-4">
   @for (product of productsList.slice(0, 18); track product.id) {
-    <div class="col-md-3 col-sm-6">
+    <div class="col-md-4 col-sm-6 col-12 col-lg-3 mb-4 ">
      <app-product-card [product]="product"></app-product-card>
     </div>
   }
