--- a/src/app/shared/nav-auth/nav-auth.component.html
+++ b/src/app/shared/nav-auth/nav-auth.component.html
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand-lg nav-back">
+<nav class="navbar navbar-expand-lg nav-back fixed-top">
   <div class="container-fluid">
-    <a class="navbar-brand" routerLink="Login">
+    <a class="navbar-brand" routerLink="login">
         <img src="./assets/images/Logo.png" alt="">
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
