--- a/src/app/shared/nav-main/nav-main.component.html
+++ b/src/app/shared/nav-main/nav-main.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg nav-back">
+<nav class="navbar navbar-expand-lg nav-back fixed-top">
   <div class="container px-4 py-2">
     <a class="navbar-brand" routerLink="home">
       <img src="./assets/images/Logo.png" alt="" />
