--- a/src/styles.css
+++ b/src/styles.css
@@ -15,6 +15,9 @@ body {
   font-family: var(--font-family) !important;
   margin: 0;
   padding: 0;
+    padding-top: 40px;
+
+  
 }
 
 .nav-link {
@@ -90,3 +93,48 @@ a:hover {
   background-color: #fff;
   border: 1px solid black;
 }
+
+/* toaster styling */
+
+.toast-container {
+  z-index: 99999 !important;
+  position: fixed !important;
+}
+
+.toast-container .ngx-toastr {
+  background-color: #fff !important; /* white background */
+  color: #000 !important; /* black text */
+  border-radius: 10px;
+  padding: 14px 18px;
+  font-weight: 500;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  border: none;
+  position: relative;
+}
+
+.toast-success::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 5px;
+  background-color: #28a745; /* green */
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+.toast-error::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 5px;
+  background-color: #dc3545; /* red */
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+
+
