--- a/src/app/features/receipt/receipt.component.css
+++ b/src/app/features/receipt/receipt.component.css
@@ -224,9 +224,8 @@
   color: #1a1a1a;
   margin-bottom: 0.5rem;
   line-height: 1.4;
-  display: -webkit-box;
-  -webkit-line-clamp: 2;
-  -webkit-box-orient: vertical;
+  line-clamp: 2;
+  text-overflow: ellipsis;
   overflow: hidden;
 }
 
