modified wishlist button and trash icon

--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -8,13 +8,13 @@
 
          <owl-carousel-o [options]="customOptionsMain">
             <ng-template carouselSlide>
-              <img src="../../../assets/images/slider-2.jpeg" height="400px" class="w-100" alt="">
+              <img src="assets/images/slider-2.jpeg" height="400px" class="w-100" alt="">
             </ng-template>  
               <ng-template carouselSlide>
-              <img src="../../../assets/images/slider-image-2.jpeg" height="400px" class="w-100" alt="">
+              <img src="assets/images/slider-image-2.jpeg" height="400px" class="w-100" alt="">
             </ng-template>  
               <ng-template carouselSlide>
-              <img src="../../../assets/images/slider-image-3.jpeg" height="400px" class="w-100" alt="">
+              <img src="assets/images/slider-image-3.jpeg" height="400px" class="w-100" alt="">
             </ng-template>  
              
    
