--- a/src/app/features/wishlist/wishlist.component.html
+++ b/src/app/features/wishlist/wishlist.component.html
@@ -44,11 +44,11 @@
               </button>
 
               <button
-                class="btn btn-link text-danger p-0"
+                class="btn btn-link text-black p-0"
                 (click)="deleteFromWishlist(item._id)"
                 title="Remove from Wishlist"
               >
-                <i class="fa-solid fa-trash fs-5"></i>
+                <i class="fa-solid text-black fa-trash fs-5"></i>
               </button>
             </div>
           </div>
