--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -25,8 +25,8 @@
     </div>
     <div class="col-md-3">
       <div>
-        <img src="../../../assets/images/grocery-banner.png" height="200px" class="w-100" alt="">
-        <img src="../../../assets/images/grocery-banner-2.jpeg" height="200px" class="w-100" alt="">
+        <img src="assets/images/grocery-banner.png" height="200px" class="w-100" alt="">
+        <img src="assets/images/grocery-banner-2.jpeg" height="200px" class="w-100" alt="">
       </div>
     </div>
   </div>
