improved the UI for login and register components

--- a/src/app/features/auth/login/login.component.html
+++ b/src/app/features/auth/login/login.component.html
@@ -1,5 +1,6 @@
-<section>
-  <h2 class="text-main mb-5 ">Login Now :</h2>
+<section class="d-flex justify-content-center align-items-center">
+  <div class="auth-form-container">
+    <h2 class="text-main mb-5">Login Now :</h2>
     <form [formGroup]="loginForm" (ngSubmit)="login()">
 
    <div class="mb-3">
@@ -61,7 +62,8 @@
 </button>
   </div>
   </form>
-  </section>
+  </div>
+</section>
   
 
 
